--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "cryptoCoins": {
+    "angular17_login_signup_localstorage": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -23,7 +23,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/crypto-coins",
+            "outputPath": "dist/angular17_login_signup_localstorage",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -67,10 +67,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "cryptoCoins:build:production"
+              "buildTarget": "angular17_login_signup_localstorage:build:production"
             },
             "development": {
-              "buildTarget": "cryptoCoins:build:development"
+              "buildTarget": "angular17_login_signup_localstorage:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -78,7 +78,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "cryptoCoins:build"
+            "buildTarget": "angular17_login_signup_localstorage:build"
           }
         },
         "test": {
